<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="ns_api"
        android:title="@string/ns_api_title">

        <SwitchPreference
            android:title="@string/ns_enable_title"
            android:key="ns_enable"
            android:disableDependentsState="false"
            android:summary="">
        </SwitchPreference>
        <EditTextPreference
            android:dependency="ns_enable"
            android:title="@string/ns_url_title"
            android:key="ns_url"
            android:dialogTitle="@string/ns_url_dialogtitle"
            android:dialogMessage="@string/ns_url_dialogmessage"
            android:defaultValue="https://{YOUR-SITE}.azurewebsites.net/"
            android:inputType="textUri">
        </EditTextPreference>
        <EditTextPreference
            android:dependency="ns_enable"
            android:title="@string/ns_api_secret_title"
            android:key="ns_api_secret"
            android:dialogTitle="@string/ns_api_secret_dialogtitle"
            android:dialogMessage="@string/ns_api_secret_dialogmessage"
            android:defaultValue=""
            android:inputType="textPassword">
        </EditTextPreference>
        <EditTextPreference
            android:dependency="ns_enable"
            android:title="@string/ns_api_device_title"
            android:key="ns_api_device"
            android:dialogTitle="@string/ns_api_device_dialogtitle"
            android:dialogMessage="@string/ns_api_device_dialogmessage"
            android:defaultValue=""
            android:inputType="text">
        </EditTextPreference>
        <EditTextPreference
            android:dependency="ns_enable"
            android:title="@string/ns_api_hours"
            android:key="ns_api_hours"
            android:summary="@string/ns_api_hours_summary"
            android:dialogTitle="@string/ns_api_hours_dialogtitle"
            android:dialogMessage="@string/ns_api_hours_dialogmessage"
            android:defaultValue="1"
            android:numeric="decimal">
        </EditTextPreference>
        <SwitchPreference
            android:title="@string/ns_emulate_xdrip"
            android:key="ns_emulate_xdrip"
            android:disableDependentsState="false"
            android:summary="@string/ns_emulate_xdrip_summary">
        </SwitchPreference>
        <SwitchPreference
            android:title="@string/ns_sendtodanaapp"
            android:dependency="ns_emulate_xdrip"
            android:key="ns_sendtodanaapp"
            android:disableDependentsState="false"
            android:summary="@string/ns_ns_sendtodanaapp_summary">
        </SwitchPreference>
    </PreferenceCategory>
</PreferenceScreen>