<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.nightscout.client.MainActivity">

    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_preferences" />
    <item
        android:id="@+id/action_clearlog"
        android:title="@string/action_clearlog" />
    <item
        android:id="@+id/action_restartservices"
        android:title="@string/action_restartservices" />
    <item
        android:id="@+id/action_showqueue"
        android:title="@string/action_showqueue" />
    <item
        android:id="@+id/action_deliverqueue"
        android:title="@string/action_deliverqueue" />
    <item
        android:id="@+id/action_clearqueue"
        android:title="@string/action_clearqueue" />
    <item
        android:id="@+id/action_runtest"
        android:title="@string/action_runtest" />
    <!--    <item
            android:id="@+id/action_exit"
            android:title="@string/action_exit" />
    -->
</menu>
